tests/machine/x/c/tree_sum.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/tree_sum.c:11:8: error: field ‘left’ has incomplete type
   11 |   Tree left;
      |        ^~~~
/workspace/mochi/tests/machine/x/c/tree_sum.c:13:8: error: field ‘right’ has incomplete type
   13 |   Tree right;
      |        ^~~~~
/workspace/mochi/tests/machine/x/c/tree_sum.c: In function ‘sum_tree’:
/workspace/mochi/tests/machine/x/c/tree_sum.c:24:16: error: expected expression before ‘Leaf’
   24 |   return (t == Leaf ? 0
      |                ^~~~
/workspace/mochi/tests/machine/x/c/tree_sum.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/tree_sum.c:31:26: error: expected expression before ‘Leaf’
   31 |   int t = (Node){.left = Leaf,
      |                          ^~~~
/workspace/mochi/tests/machine/x/c/tree_sum.c:34:27: error: incompatible type for argument 1 of ‘sum_tree’
   34 |   printf("%d\n", sum_tree(t));
      |                           ^
      |                           |
      |                           int
/workspace/mochi/tests/machine/x/c/tree_sum.c:23:19: note: expected ‘Tree’ {aka ‘struct Tree’} but argument is of type ‘int’
   23 | int sum_tree(Tree t) {
      |              ~~~~~^

   1: #include <stdio.h>
